# State-from-scratch

./: .gitignore  README.md
cell-eval-from-scratch/outputs/: agg_results.csv  results.csv
cell-eval-from-scratch/scripts/: smoke_test.py  smoke_test_de.py  smoke_test_metrics.py
cell-eval-from-scratch/src/celleval_fs/: data_io.py  de.py  evaluate.py  types.py
cell-eval-from-scratch/src/celleval_fs/metrics/: __init__.py  basic.py
cell-load-from-scratch/: pyproject.toml
cell-load-from-scratch/configs/: toy.toml
cell-load-from-scratch/scripts/: make_toy_h5ad.py  smoke_test.py
cell-load-from-scratch/src/cellload_fs/: __init__.py  collate.py  config.py  dataset.py  io.py
