[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellload-fs"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["torch", "anndata", "pandas", "numpy", "tomli"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
